--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "Tu Nombre",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
