--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.13.2",
+    "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "cloudinary": "^1.40.0",
